Fix reply box overflow issue on small device

--- a/scss/common/_reply.scss
+++ b/scss/common/_reply.scss
@@ -106,8 +106,10 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
-    min-width: $container-max-width;
+    max-width: 100%;
+    min-width: 0;
     padding: 0;
+    width: $container-max-width;
 
     .control {
       display: flex;
